# vector

./: .core.yml  .gitignore  CMakeLists.txt  Dockerfile  LICENSE.txt  README.md
cmake/: git.cmake  pack.cmake  test.cmake  vectorConfig.cmake
include/vector/: memory.h  vector.h
src/: memory.c  vector.c
test/: CMakeLists.txt  vector.c
